test/syntax/fail/mismatch_pattern_tuple_size.sync
let node f (s: (int, int)) =
  let (a, b, c) = s in
  0
